tests/test156.rael.exp
Error [tests/test156.rael:1:9]: Expected the number to be a whole number
| log "A" + 65.12
|         ^
