tests/test156.rael
log "A" + 65.12